Solve category overlapped by next element issue

--- a/src/components/addUpdateProduct/AddUpdateProduct.css
+++ b/src/components/addUpdateProduct/AddUpdateProduct.css
@@ -5,3 +5,7 @@
   height: 100%;
   text-align: center;
 }
+
+.select__menu {
+  z-index: 1000!important;
+}
